# ray-okay

./: LICENSE  README.md  ray-okay.cabal
src/: Algebra.hs  Main.hs  Tracer.hs  World.hs
